# lambda-notebook

./: .gitignore  .nojekyll  .travis.yml  CHANGELOG.html  CHANGELOG.md  Composition operations.ipynb  Hamblin semantics.ipynb  LICENSE  LSA poster examples.ipynb  Lamb demo.ipynb  Lambda calculus testing.ipynb  MANIFEST.in  Makefile  README.md  Relative clauses.ipynb  TODO.md  Testing 2 (top down computation).ipynb  Testing 3 (Parsing).ipynb  about.html  console.py  definite article tutorial.ipynb  demo-for-linguists.html  index.html  install_lambda_kernel.py  lamb_setup.py  lambda_notebook.cmd  lambda_notebook.command  lambda_notebook.py  lambda_shell.py  meta.py  misc.ipynb  pyproject.toml  robots.txt  search.json  setup.cfg  setup.py  sitemap.xml  testing.ipynb  von Fintel and Heim notes.ipynb
archive/: kernel.json
build_support/: Makefile  README  README_packaged.txt  build_venv.sh  lambdax_alpha.icns  modulegraph_fix.diff  setup.py  start_notebook.py  start_notebook.sh  start_notebook_simple.sh
build_support/licenses/: IPython_LICENSE.txt  README  libzmq_LICENSE.txt  python_LICENSE.txt
docs/: .gitignore  CHANGELOG.md  _quarto.yml  about.qmd  demo-for-linguists.ipynb  index.ipynb  lamb  lambda.bib
kernel/lambda-notebook/: README
lamb/: __init__.py  auto.py  combinators.py  console.py  display.py  lang.py  lnsetup.py  magics.py  meta.py  parsing.py  test_lang.py  tree_mini.py  treetransforms.py  types.py  utils.py
lamb/lang/: __init__.py  composition.py  parser.py  test.py
lamb/meta/: __init__.py  boolean.py  core.py  evaluation.py  meta.py  number.py  parser.py  ply.py  quantifiers.py  sets.py  test.py  typeref.py
notebooks/: 00 Lambda Notebook Intro.ipynb  00 Readme for upgrading from IPython 2.ipynb  00_ipython_notebook_tour.ipynb  An introduction to compositionality via "two plus two is four".ipynb  An introduction to compositionality.ipynb  Composition operations.ipynb  Continuations and quantifier scope.ipynb  Diagnostics.ipynb  Hamblin semantics.ipynb  Introduction to typed lambda calculus.ipynb  LSA poster examples.ipynb  Lamb demo.ipynb  Lambda Notebook Demo (executed).ipynb  Lambda Notebook Demo.ipynb  Lambda Notebook Intro (start here).ipynb  Lambda calculus testing.ipynb  Metalanguage documentation.ipynb  Neo-davidsonian event semantics.ipynb  Relative clauses.ipynb  Type shifting.ipynb  Variable free binding.ipynb  definite article tutorial.ipynb  von Fintel and Heim (beginning).ipynb  von Fintel and Heim notes.ipynb
notebooks/documentation/: Ad hoc polymorphism.ipynb  Binding expressions.ipynb  Composition.ipynb  Domain elements and MetaTerms.ipynb  Intro to type variables.ipynb  (+7 more)
(+22 files in other folders)
