[metadata]
name = lambda-notebook
description = Tools for linguistic semantics (lambda calculus, logic, etc), aimed at Jupyter
long_description = file: README.md
url = https://github.com/rawlins/lambda-notebook/
version = 0.6.0
license = BSD 3-Clause License
author = Kyle Rawlins
author_email = 'kgr@jhu.edu'
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: BSD License
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Visualization
    Topic :: Text Processing :: Linguistic
    Framework :: Jupyter
    Environment :: Web Environment

[options]
packages = lamb
python_requires = >=3.6
include_package_data = True
install_requires =
    svgling >= 0.3
    ipykernel
